# reverse

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/schemas/: lcd_schemas.py
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/icons/: Internet.jsx  Wifi.jsx
